Fix Align
- 정렬 수정

--- a/carrot/src/components/product-detail/Detail.css
+++ b/carrot/src/components/product-detail/Detail.css
@@ -16,7 +16,10 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.nav {
+.nav-product {
+  display: flex;
+  justify-content: flex-start;
+  text-align: left;
   margin-top: 1rem;
   margin-bottom: 1rem;
   font-size: 0.8rem;
